--- a/0329/README
+++ b/0329/README
@@ -17,9 +17,10 @@ c. 使用 adminer
    http://localhost/adminer.php
    
 
-命令提示字元 D:\xampp\mysql\bin\mysql -uroot
+命令提示字元 ```D:\xampp\mysql\bin\mysql -uroot```
 
-create database test0329 DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_general_ci'
+```
+CREATE DATABASE test0329 DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_general_ci'
 
 CREATE USER 'mememe'@'localhost' IDENTIFIED BY '123456';
 
@@ -28,13 +29,16 @@ GRANT ALL PRIVILEGES ON test0329.* TO 'mememe'@'localhost';
 FLUSH PRIVILEGES;
 
 EXIT;
+```
 
-命令提示字元 D:\xampp\mysql\bin\mysql -umememe -p
+命令提示字元 ```D:\xampp\mysql\bin\mysql -umememe -p```
 
-use test0329;
+```
+USE test0329;
 
 CREATE TABLE moneybook (
   m_id INT UNSIGNED NOT NULL AUTO_INCREMENT PRIMARY KEY,
   name VARCHAR(200),
   cost INT
 ) CHARACTER SET 'utf8' COLLATE 'utf8_general_ci';
+```
